# FutuGen-commodity-sentiment

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.bat
audio_samples/real/: fed_rate_cut.webm  gold_record.webm  opec_increase.webm
data/: signals_log.jsonl
docs/: REQUIREMENTS_FULFILLMENT.md  TECHNICKY_DOKUMENT.docx  TECHNICKY_DOKUMENT.md  TESTING_GUIDE.md  architecture.md
evaluation/: backtesting.py  baselines.py  build_dataset.py  calibration.py  dataset.py  fetch_prices.py  grade.py  historical_events.json  historical_events_enriched.json  historical_test_set.json  horizon_analysis.py  pnl.py  reliability.py  run_eval.py  run_multicommodity_eval.py  run_professional_backtest.py  splits.py  statistics.py  test_set.json  walk_forward.py
evaluation/results/: evaluation_report.md  graded_test.json  multicommodity_report.md  multicommodity_runs.json  (+3 more)
scripts/: create_demo_video.py  download_historical_audio.py  generate_samples.py  process_agent_results.py  seed_historical_backtests.py  web_terminal.py
src/: config.py  main.py  models.py  pipeline.py
tests/: conftest.py  test_backtesting.py  test_cli.py  test_dashboard.py  test_entity_extractor.py  test_error_handling.py  test_evaluation.py  test_evaluation_modules.py  test_horizon_analysis.py  test_impact_scorer.py  test_ingestion.py  test_latency_benchmark.py  test_llm.py  test_models.py  test_pipeline_integration.py  test_prices.py  test_segment_aggregator.py  test_signal_log.py  test_stream_url_validation.py  test_transcriber.py  test_webhook.py
(+22 files in other folders)
