[project]
name = "commodity-sentiment-monitor"
version = "0.1.0"
description = "Real-time pipeline: live stream audio -> speech transcription -> commodity entity extraction -> market impact scoring -> dashboard"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "anthropic>=0.43.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.0",
    "yt-dlp>=2024.12.0",
    "httpx>=0.28.0",
    "yfinance>=0.2.50",
    "sse-starlette>=2.0.0",
    "edge-tts>=6.1.0",
    "av>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/analysis/prompts.py" = ["E501"]  # few-shot examples in string literals
"src/models.py" = ["UP042"]  # str+Enum needed for Pydantic JSON serialization

[tool.mypy]
python_version = "3.11"
strict = true
